--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^9.1.2",
+    "react-slideshow-image": "^4.3.1",
     "stripe": "^16.8.0"
   },
   "devDependencies": {
