Github経由のログイン機能完成しました。

--- a/.env
+++ b/.env
@@ -5,4 +5,8 @@ STRIPE_SECRET_KEY=sk_test_51PsIS0HM4PhonqVdXxiuXY1hflYk9tyWmJTgFcCSUF5JINki3OWAs
 MONGODB_URI=mongodb+srv://masataka1kousuke1:cLiENB1s6HyQkBIb@fdore.sdcqg.mongodb.net/?retryWrites=true&w=majority&appName=fdore
 
 #NextAuth
-NEXTAUTH_URL=https://localhost3000
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_SECRET=ATI3oeKQm1jy5dX9x80vpyrq0L+3WJm8/xIi29d3AFU=
+#GitHubのユーザー認証
+GITHUB_CLIENT_ID=Ov23li4vfu8juheLJR96
+GITHUB_CLIENT_SECRET=d67af530f95724feec8eb9b918f7ca537284764d
