Google経由のログイン機能を搭載しました。そしてログイン成功したらトップページに飛ばされます。

--- a/.env
+++ b/.env
@@ -10,3 +10,7 @@ NEXTAUTH_SECRET=ATI3oeKQm1jy5dX9x80vpyrq0L+3WJm8/xIi29d3AFU=
 #GitHubのユーザー認証
 GITHUB_CLIENT_ID=Ov23li4vfu8juheLJR96
 GITHUB_CLIENT_SECRET=d67af530f95724feec8eb9b918f7ca537284764d
+
+#Google認証追加
+GOOGLE_CLIENT_ID=920626971603-a8jhm7jhtrl1558avl3ge6t70g3lis1l.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
