Facebook,Instagramのログイン機能の導入を使用としても少し手こずっているのでまた後程やります。login.tsxにコメントアウトしてあります。

--- a/.env
+++ b/.env
@@ -14,3 +14,10 @@ GITHUB_CLIENT_SECRET=d67af530f95724feec8eb9b918f7ca537284764d
 #Google認証追加
 GOOGLE_CLIENT_ID=920626971603-a8jhm7jhtrl1558avl3ge6t70g3lis1l.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
+
+#FaceBock認証追加
+FACEBOOK_CLIENT_ID=8335531946506853
+FACEBOOK_CLIENT_SECRET=da5af67049e9e5da05c47d7a5cb9730e
+#Instagram認証追加
+INSTAGRAM_CLIENT_ID=420255573891885
+INSTAGRAM_CLIENT_SECRET=719e0954328b5621e16cc738896653a4
