--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.16.7",
     "@reduxjs/toolkit": "^2.2.7",
     "@stripe/stripe-js": "^4.3.0",
+    "express": "^4.19.2",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.4",
     "next": "14.2.6",
