--- a/package.json
+++ b/package.json
@@ -15,16 +15,19 @@
     "@mui/material": "^5.16.7",
     "@reduxjs/toolkit": "^2.2.7",
     "@stripe/stripe-js": "^4.3.0",
+    "axios": "^1.7.7",
+    "bcrypt": "^5.1.1",
     "express": "^4.19.2",
     "mongodb": "^6.8.0",
-    "mongoose": "^8.5.4",
+    "mongoose": "^8.6.0",
     "next": "14.2.6",
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^9.1.2",
     "react-slideshow-image": "^4.3.1",
-    "stripe": "^16.8.0"
+    "stripe": "^16.8.0",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
