カスタムフックス試行

--- a/.env
+++ b/.env
@@ -8,6 +8,8 @@ STRIPE_SECRET_KEY=sk_test_51PsIS0HM4PhonqVdXxiuXY1hflYk9tyWmJTgFcCSUF5JINki3OWAs
 #Mongo
 MONGODB_URI=mongodb+srv://masataka1kousuke1:Kousuke0711@cluster0.ckup8.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 
+#Mongodb二代目のまさたかURI
+
 #NextAuth
 NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_SECRET=ATI3oeKQm1jy5dX9x80vpyrq0L+3WJm8/xIi29d3AFU=
