--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^9.1.2",
+    "react-router-dom": "^6.26.1",
     "react-slideshow-image": "^4.3.1",
     "stripe": "^16.8.0",
     "uuid": "^10.0.0"
