--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.16.7",
     "@reduxjs/toolkit": "^2.2.7",
     "@stripe/stripe-js": "^4.3.0",
+    "@types/react-router-dom": "^5.3.3",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "express": "^4.19.2",
