ノードメーラーが仮完成しました Gmailを使った認証機能です 見た目と背景が何も変えてないので見た目がダサいです

--- a/.env
+++ b/.env
@@ -27,3 +27,7 @@ FACEBOOK_CLIENT_SECRET=da5af67049e9e5da05c47d7a5cb9730e
 #Instagram認証追加
 INSTAGRAM_CLIENT_ID=420255573891885
 INSTAGRAM_CLIENT_SECRET=719e0954328b5621e16cc738896653a4
+
+#Gmail認証
+GMAILUSER="ao09011078@gmail.com"
+GMAILPASSWORD="jiur oqnr lcvd oziw"
