--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
+    "bootstrap": "^5.3.3",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.8.0",
     "mongoose": "^8.6.0",
     "next": "14.2.6",
     "next-auth": "^4.24.7",
+    "nodemailer": "^6.9.16",
     "react": "^18",
+    "react-bootstrap": "^2.10.5",
     "react-dom": "^18",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
@@ -33,6 +36,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.16",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
