--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
+    "@paypayopa/paypayopa-sdk-node": "^2.1.0",
     "@reduxjs/toolkit": "^2.2.7",
     "@stripe/stripe-js": "^4.3.0",
     "@types/react-router-dom": "^5.3.3",
@@ -32,7 +33,8 @@
     "react-slideshow-image": "^4.3.1",
     "stripe": "^16.8.0",
     "swiper": "^11.1.14",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
