--- a/package.json
+++ b/package.json
@@ -27,11 +27,14 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
     "react-slideshow-image": "^4.3.1",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "stripe": "^16.8.0",
     "swiper": "^11.1.14",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
+    "@types/express": "^5.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
