--- a/.env
+++ b/.env
@@ -27,3 +27,6 @@ FACEBOOK_CLIENT_SECRET=da5af67049e9e5da05c47d7a5cb9730e
 #Instagram認証追加
 INSTAGRAM_CLIENT_ID=420255573891885
 INSTAGRAM_CLIENT_SECRET=719e0954328b5621e16cc738896653a4
+
+#microcmsAPI_KEY
+API_KEY = CesGTRb2iGFpqNCVgo4W4Q4MoF57LWLckTnh
