--- a/.env
+++ b/.env
@@ -29,4 +29,4 @@ INSTAGRAM_CLIENT_ID=420255573891885
 INSTAGRAM_CLIENT_SECRET=719e0954328b5621e16cc738896653a4
 
 #microcmsAPI_KEY
-API_KEY = CesGTRb2iGFpqNCVgo4W4Q4MoF57LWLckTnh
+API_KEY=CesGTRb2iGFpqNCVgo4W4Q4MoF57LWLckTnh
