商品更新機能作成しました。 出品したsellerIdと今ログインしているuserIdが同じだった場合購入buttonが編集に切り替わります。

--- a/.env
+++ b/.env
@@ -33,3 +33,7 @@ INSTAGRAM_CLIENT_SECRET=719e0954328b5621e16cc738896653a4
 
 #microcmsAPI_KEY
 API_KEY=CesGTRb2iGFpqNCVgo4W4Q4MoF57LWLckTnh
+
+GMAILUSER=testnodemailermastakahew@gmail.com
+##TestNodemailerMasataka
+GMAILPASSWORD=ollj jlfu kvxe yiap
