--- a/package.json
+++ b/package.json
@@ -9,22 +9,32 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@ffmpeg/ffmpeg": "^0.12.15",
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
     "@paypayopa/paypayopa-sdk-node": "^2.1.0",
     "@reduxjs/toolkit": "^2.2.7",
     "@stripe/stripe-js": "^4.3.0",
+    "@types/ffmpeg": "^1.0.7",
+    "@types/gridfs-stream": "^0.5.39",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.3",
     "express": "^4.19.2",
+    "ffmpeg": "^0.0.4",
+    "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "^9.0.2",
     "microcms-js-sdk": "^3.1.2",
     "mongodb": "^6.8.0",
     "mongoose": "^8.6.0",
+    "multer": "^1.4.5-lts.1",
+    "multer-gridfs-storage": "^5.0.2",
     "next": "14.2.6",
     "next-auth": "^4.24.7",
+    "next-connect": "^1.0.0",
     "nodemailer": "^6.9.16",
     "react": "^18",
     "react-bootstrap": "^2.10.5",
@@ -33,6 +43,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
     "react-slideshow-image": "^4.3.1",
+    "sharp": "^0.33.5",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "stripe": "^16.8.0",
