--- a/package.json
+++ b/package.json
@@ -24,14 +24,12 @@
     "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.3",
     "express": "^4.19.2",
-    "ffmpeg": "^0.0.4",
-    "gridfs-stream": "^1.1.1",
+    "init": "^0.1.2",
     "jsonwebtoken": "^9.0.2",
     "microcms-js-sdk": "^3.1.2",
-    "mongodb": "^6.8.0",
+    "mongodb": "^6.12.0",
     "mongoose": "^8.6.0",
     "multer": "^1.4.5-lts.1",
-    "multer-gridfs-storage": "^5.0.2",
     "next": "14.2.6",
     "next-auth": "^4.24.7",
     "next-connect": "^1.0.0",
