--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emoji-mart/react": "^1.1.1",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@ffmpeg/ffmpeg": "^0.12.15",
@@ -29,10 +30,8 @@
     "microcms-js-sdk": "^3.1.2",
     "mongodb": "^6.12.0",
     "mongoose": "^8.6.0",
-    "multer": "^1.4.5-lts.1",
     "next": "14.2.6",
     "next-auth": "^4.24.7",
-    "next-connect": "^1.0.0",
     "nodemailer": "^6.9.16",
     "react": "^18",
     "react-bootstrap": "^2.10.5",
@@ -50,7 +49,10 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/busboy": "^1.5.4",
     "@types/express": "^5.0.0",
+    "@types/formidable": "^3.4.5",
+    "@types/multer": "^1.4.12",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.16",
     "@types/react": "^18",
