--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^5.16.7",
     "@paypayopa/paypayopa-sdk-node": "^2.1.0",
     "@reduxjs/toolkit": "^2.2.7",
+    "@stripe/react-stripe-js": "^3.1.1",
     "@stripe/stripe-js": "^4.3.0",
     "@types/ffmpeg": "^1.0.7",
     "@types/gridfs-stream": "^0.5.39",
