--- a/package.json
+++ b/package.json
@@ -53,11 +53,13 @@
     "@types/busboy": "^1.5.4",
     "@types/express": "^5.0.0",
     "@types/formidable": "^3.4.5",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/multer": "^1.4.12",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.16",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^10.0.0",
     "eslint": "^8",
     "eslint-config-next": "^14.2.23",
     "typescript": "^5"
